--- a/debian/control
+++ b/debian/control
@@ -25,8 +25,8 @@ Build-Depends: cmake (>= 2.8.11),
                qtdeclarative5-dev (>= 5.4)
 Standards-Version: 3.9.6
 Homepage: https://projects.kde.org/projects/frameworks/kactivities
-Vcs-Browser: http://anonscm.debian.org/cgit/pkg-kde/frameworks/kactivities.git
-Vcs-Git: git://anonscm.debian.org/pkg-kde/frameworks/kactivities.git
+Vcs-Browser: https://anonscm.debian.org/git/pkg-kde/frameworks/kactivities.git
+Vcs-Git: https://anonscm.debian.org/pkg-kde/frameworks/kactivities.git
 
 Package: libkf5activities-dev
 Section: libdevel
