Make kactivitymanagerd a recommend rather than a hard depend seeing as it is in the Plasma release cycle, this  will allow for kactivities to build with the frameworks cycle.

--- a/debian/control
+++ b/debian/control
@@ -41,7 +41,8 @@ Description: development files for kactivities.
 Package: libkf5activities5
 Architecture: any
 Multi-Arch: same
-Depends: kactivitymanagerd, ${misc:Depends}, ${shlibs:Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
+Recommends: kactivitymanagerd
 Description: Library to organize the user work in separate activities.
  This library provides functionality for managing Activities.
 
